--- a/Front/contacts.html
+++ b/Front/contacts.html
@@ -44,6 +44,9 @@
               ><span class="fa fa-map"></span>Región/Ciudad</a
             >
           </li>
+          <li>
+            <a href="./login.html"><span class="fa fa-power-off"></span>Salir</a>
+          </li>
         </ul>
 
         <div class="footer"></div>
