--- a/Front/company.html
+++ b/Front/company.html
@@ -80,18 +80,14 @@
                   </div>
                   <div class="form-group col-md-6">
                     <label for="companyCountry">País</label>
-                    <select id="companyCountry" class="form-control">
-                      <option selected></option>
-                      <option>Argentina</option>
-                      <option>Colombia</option>
+                    <select onchange="showCities()" id="companyCountry" class="form-control">
+                      <option selected ></option>
                     </select>
                   </div>
                   <div class="form-group col-md-6">
                     <label for="companyCity">Ciudad</label>
                     <select id="companyCity" class="form-control">
                       <option selected></option>
-                      <option>Medellín</option>
-                      <option>Buenos Aires</option>
                     </select>
                   </div>
                   <div class="form-group col-md-6">
@@ -138,72 +134,8 @@
                         <th>Telefono</th>
                         <th></th>
                       </thead>
-                      <tbody>
-                        <tr>
-                          <td>
-                            <input type="checkbox" name="" class="selectitem" />
-                          </td>
-                          <td>Apple</td>
-                          <td>EEUU</td>
-                          <td>California</td>
-                          <td>Street 25 # 4567</td>
-                          <td>Apple@icloud.com</td>
-                          <td>6138341</td>
-                          <td>
-                            <button class="edititem">
-                              <i class="fa fa-pencil"></i>
-                            </button>
-                          </td>
-                        </tr>
-                        <tr>
-                        <tr>
-                          <td>
-                            <input type="checkbox" name="" class="selectitem" />
-                          </td>
-                          <td>Bancolombia</td>
-                          <td>Colombia</td>
-                          <td>Medellín</td>
-                          <td>Cr 25 # 4567</td>
-                          <td>hola@abancolombia.com</td>
-                          <td>136894</td>
-                          <td>
-                            <button class="edititem">
-                              <i class="fa fa-pencil"></i>
-                            </button>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <input type="checkbox" name="" class="selectitem" />
-                          </td>
-                          <td>Acamica</td>
-                          <td>Argentina</td>
-                          <td>Buenos aires</td>
-                          <td>Cr 25 # 4567</td>
-                          <td>hola@acamica.com</td>
-                          <td>341698</td>
-                          <td>
-                            <button class="edititem">
-                              <i class="fa fa-pencil"></i>
-                            </button>
-                          </td>
-                        </tr>
-                        <tr>
-                          <td>
-                            <input type="checkbox" name="" class="selectitem" />
-                          </td>
-                          <td>IBM</td>
-                          <td>EEUU</td>
-                          <td>New yok</td>
-                          <td>street 25 # 4567</td>
-                          <td>hello@ibm.com</td>
-                          <td>313689</td>
-                          <td>
-                            <button class="edititem">
-                              <i class="fa fa-pencil"></i>
-                            </button>
-                          </td>
-                        </tr>
+                      <tbody id="companyContainer">
+                      
                       </tbody>
                     </table>
                   </div>
@@ -234,7 +166,7 @@
   </div>
 
   <script src="./JS/jquery.min.js"></script>
-  <script src="./JS/popper.js"></script>
   <script src="./JS/bootstrap.min.js"></script>
   <script src="./JS/main.js"></script>
+  <script src="./JS/Company/company.js"></script>
   </div>
