--- a/Front/contacts.html
+++ b/Front/contacts.html
@@ -76,14 +76,14 @@
             <div class="collapse navbar-collapse" id="navbarSupportedContent">
               <button
                 class="btn btn-primary"
-                id="adduser"
+                id="BtnAddContact"
                 type="submit"
                 data-toggle="modal"
                 data-target="#newContact"
               >
                 <i class="fa fa-user-plus"></i>
               </button>
-              <button class="btn btn-primary" type="submit" id="dowload">
+              <button class="btn btn-primary" type="submit" id="dowload" data-toggle="modal" data-target="#Contactsdowload">
                 <i class="fa fa-download"></i>
               </button>
             </div>
@@ -149,26 +149,24 @@
                     </div>
                     <div class="form-group col-md-4">
                       <label for="inputRegion">Region</label>
-                      <select id="inputRegion" class="form-control">
-                        <option selected>Choose...</option>
-                        <option>...</option>
+                      <select id="inputRegion" onchange="showCountries()" class="form-control">
+                        <option selected> - - </option>
+                        
                       </select>
                     </div>
                     <div class="form-group col-md-4">
                       <label for="inputCountry">País</label>
-                      <select id="inputCountry" class="form-control">
-                        <option selected>Choose...</option>
-                        <option>...</option>
+                      <select id="inputCountry" onchange="showCities()" class="form-control">
+                        <option selected> </option>
                       </select>
                     </div>
                     <div class="form-group col-md-4">
                       <label for="inputCity">Ciudad</label>
                       <select id="inputCity" class="form-control">
-                        <option selected>Choose...</option>
-                        <option>...</option>
+                        <option selected>- -</option>
                       </select>
                     </div>
-                    <div class="form-group col-md-6">
+                    <div class="form-group col-md-4">
                       <label for="inputAddress">Dirección</label>
                       <input
                         type="text"
@@ -177,12 +175,15 @@
                       />
                     </div>
                     <div class="form-group col-md-4">
-                      <label for="inputInterest">Interés</label>
-                      <input
-                        type="range"
-                        class="form-control-range"
-                        id="inputInterest"
-                      />
+                      <label for="inputChannel">Interés (%)</label>
+                      <select id="inputInterest" class="form-control">
+                        <option selected> -- </option>
+                        <option>0</option>
+                        <option>25</option>
+                        <option>50</option>
+                        <option>75</option>
+                        <option>100</option>
+                      </select>
                     </div>
                     
                   </div>
@@ -196,13 +197,57 @@
                 >
                   Limpiar
                 </button>
-                <button type="button" class="btn btn-primary">
-                  Guardar
+                <button type="button" class="btn btn-primary" id="saveContact" onclick="getContactData()">
+                  Guardar contacto
                 </button>
               </div>
             </div>
           </div>
         </div>
+
+        <div
+        class="modal fade"
+        id="deleteContactConfirm"
+        data-toggle="modal"
+        tabindex="-1"
+        aria-labelledby="deleteConfirmLabel"
+        aria-hidden="true"
+      >
+        <div class="modal-dialog">
+          <div class="modal-content">
+            <div class="modal-header">
+              <h5 class="modal-title" id="deleteConfirmLabel">
+                ¿Estás seguro que desea eliminar el contacto?
+              </h5>
+              <button
+                type="button"
+                class="close"
+                data-dismiss="modal"
+                aria-label="Close"
+              >
+                <span aria-hidden="true">&times;</span>
+              </button>
+            </div>
+            <div class="modal-footer">
+              <button
+                type="button"
+                class="btn btn-primary"
+                id="confirmDelete"
+                data-dismiss="modal"
+              >
+                SI
+              </button>
+              <button
+                type="button"
+                class="btn btn-primary"
+                data-dismiss="modal"
+              >
+                NO
+              </button>
+            </div>
+          </div>
+        </div>
+      </div>
 
         <!--tabla-->
         <h3 class="mb-4">Contactos</h3>
@@ -220,202 +265,11 @@
                           <th>País/Región</th>
                           <th>Compañía</th>
                           <th>Cargo</th>
-                          <th>Canal</th>
                           <th>Interés</th>
                           <th></th>
                         </thead>
-                        <tbody>
-                          <tr>
-                            <td>
-                              <input
-                                type="checkbox"
-                                name=""
-                                class="selectitem"
-                              />
-                            </td>
-                            <td>Nikki Villada</td>
-                            <td>Colombia</td>
-                            <td>Animal planet</td>
-                            <td>Gerente</td>
-                            <td>Email</td>
-                            <td class="text-primary">
-                              <div class="progress">
-                                <div
-                                  class="progress-bar bg-info"
-                                  role="progressbar"
-                                  style="width: 50%"
-                                  aria-valuenow="50"
-                                  aria-valuemin="0"
-                                  aria-valuemax="100"
-                                ></div>
-                              </div>
-                            </td>
-                            <td>
-                              <button class="edititem">
-                                <i class="fa fa-pencil"></i>
-                              </button>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <input
-                                type="checkbox"
-                                name=""
-                                id=""
-                                class="selectitem"
-                              />
-                            </td>
-                            <td>Martin Villada</td>
-                            <td>Argentina</td>
-                            <td>MTV Miaw</td>
-                            <td>Diseñador</td>
-                            <td>Celular</td>
-                            <td class="text-primary">
-                              <div class="progress">
-                                <div
-                                  class="progress-bar bg-success"
-                                  role="progressbar"
-                                  style="width: 25%"
-                                  aria-valuenow="25"
-                                  aria-valuemin="0"
-                                  aria-valuemax="100"
-                                ></div>
-                              </div>
-                            </td>
-                            <td>
-                              <button class="edititem">
-                                <i class="fa fa-pencil"></i>
-                              </button>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <input
-                                type="checkbox"
-                                name=""
-                                id=""
-                                class="selectitem"
-                              />
-                            </td>
-                            <td>Minie Villada</td>
-                            <td>Australia</td>
-                            <td>Discovery</td>
-                            <td>Actriz</td>
-                            <td>Email</td>
-                            <td class="text-primary">
-                              <div class="progress">
-                                <div
-                                  class="progress-bar bg-warning"
-                                  role="progressbar"
-                                  style="width: 75%"
-                                  aria-valuenow="75"
-                                  aria-valuemin="0"
-                                  aria-valuemax="100"
-                                ></div>
-                              </div>
-                            </td>
-                            <td>
-                              <button class="edititem">
-                                <i class="fa fa-pencil"></i>
-                              </button>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <input
-                                type="checkbox"
-                                name=""
-                                id=""
-                                class="selectitem"
-                              />
-                            </td>
-                            <td>María Jimenez</td>
-                            <td>India</td>
-                            <td>Choucair</td>
-                            <td>Developer</td>
-                            <td>Celular</td>
-                            <td class="text-primary">
-                              <div class="progress">
-                                <div
-                                  class="progress-bar bg-warning"
-                                  role="progressbar"
-                                  style="width: 75%"
-                                  aria-valuenow="75"
-                                  aria-valuemin="0"
-                                  aria-valuemax="100"
-                                ></div>
-                              </div>
-                            </td>
-                            <td>
-                              <button class="edititem">
-                                <i class="fa fa-pencil"></i>
-                              </button>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <input
-                                type="checkbox"
-                                name=""
-                                id=""
-                                class="selectitem"
-                              />
-                            </td>
-                            <td>Valentin Villada</td>
-                            <td>Australia</td>
-                            <td>Google</td>
-                            <td>Sales</td>
-                            <td>Celular</td>
-                            <td class="text-primary">
-                              <div class="progress">
-                                <div
-                                  class="progress-bar bg-danger"
-                                  role="progressbar"
-                                  style="width: 100%"
-                                  aria-valuenow="100"
-                                  aria-valuemin="0"
-                                  aria-valuemax="100"
-                                ></div>
-                              </div>
-                            </td>
-                            <td>
-                              <button class="edititem">
-                                <i class="fa fa-pencil"></i>
-                              </button>
-                            </td>
-                          </tr>
-                          <tr>
-                            <td>
-                              <input
-                                type="checkbox"
-                                name=""
-                                id=""
-                                class="selectitem"
-                              />
-                            </td>
-                            <td>Arya Jimenez</td>
-                            <td>Colombia</td>
-                            <td>Crazy S.A.S</td>
-                            <td>Arquitecta</td>
-                            <td>Email</td>
-                            <td class="text-primary">
-                              <div class="progress">
-                                <div
-                                  class="progress-bar bg-success"
-                                  role="progressbar"
-                                  style="width: 25%"
-                                  aria-valuenow="25"
-                                  aria-valuemin="0"
-                                  aria-valuemax="100"
-                                ></div>
-                              </div>
-                            </td>
-                            <td>
-                              <button class="edititem">
-                                <i class="fa fa-pencil"></i>
-                              </button>
-                            </td>
-                          </tr>
+                        <tbody id="contactsContainer">
+
                         </tbody>
                       </table>
                     </div>
@@ -428,9 +282,26 @@
       </div>
     </div>
 
+    <!-- Proximamente -->
+  <div class="modal fade" id="Contactsdowload" data-toggle="modal" tabindex="-1" aria-labelledby="deleteConfirmLabel"
+  aria-hidden="true">
+  <div class="modal-dialog modal-lg">
+    <div class="modal-content">
+      <div class="modal-header">
+        <img class="proximamente" src="./Assets/Images/proximamente.png" alt="">
+      </div>
+      <div class="modal-footer">
+        <button type="button" class="btn btn-primary" data-dismiss="modal">
+          Volver
+        </button>
+      </div>
+    </div>
+  </div>
+</div>
+
     <script src="./JS/jquery.min.js"></script>
-    <script src="./JS/popper.js"></script>
     <script src="./JS/bootstrap.min.js"></script>
     <script src="./JS/main.js"></script>
+    <script src="./JS/Contacts/contacts.js"></script>
   </body>
 </html>
